--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -3,6 +3,7 @@
 }
 body {
   margin: 0;
+  background: #d9d9d9;
 }
 img {
   width: 100%;
@@ -13,13 +14,24 @@ section {
   width: 100%;
   box-sizing: border-box;
 }
+.link {
+  display: block;
+  color: #fff;
+}
+.heading{
+    font-size: 2.5em;
+    margin: 0;
+    text-align: center;
+}
 .header {
+  margin: 0;
+  position: relative;
   background: rgba($color: #fff, $alpha: 0.2) url(./../images/header.jpg);
-  background-position: center;
+  background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
-  background-blend-mode:color;
-  width: 100vw;
+  background-blend-mode: color;
+  width: 100%;
   height: 100vh;
   box-sizing: border-box;
   color: #fff;
@@ -30,11 +42,113 @@ section {
     width: 100%;
     box-sizing: border-box;
     &__ul {
-      width: 40%;
+      width: 50%;
       display: flex;
       margin: 0;
       list-style-type: none;
       justify-content: space-between;
     }
+    &__li {
+      display: block;
+    }
+    &__nav-link {
+      text-decoration: none;
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+    &__contacts {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+  }
+  &-content {
+    width: 60%;
+    position: absolute;
+    top: 20vh;
+    left: 5vw;
+    font-size: 2em;
+    text-shadow: 0 0 10px #000;
+    text-overflow: clip;
+    &__link {
+      background: rgba($color: #000, $alpha: 0.6);
+      width: 300px;
+      border-radius: 60px;
+      padding: 10px 0;
+      margin: 0 10vw;
+      text-align: center;
+      text-decoration: none;
+    }
+  }
+}
+
+.main {
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  .location {
+    width: 100%;
+    height: 100vh;
+    padding-top: 10vh;
+    box-sizing: border-box;
+    background: url(./../images/location.jpg);
+    background-position: center;
+    background-size: cover;
+    &__heading {
+      margin-left: 5vw;
+      font-size: 2em;
+    }
+    &__subtitle {
+      margin-left: 5vw;
+      font-size: 1.5em;
+      color: #404040;
+      font-weight: normal;
+    }
+  }
+  .programs{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 5vh 5vw;
+    &-main{
+        margin: 5vh 0;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        &__item{
+            width: 49%;//!менять
+            position: relative;
+            margin-bottom: 2vh;
+            border-radius: 20px;
+            overflow: hidden;
+            height: 55vh;
+            .information{
+                z-index: 5;
+                top:80%;
+                right: 0;
+                box-sizing: border-box;
+                position: absolute;
+                height: 100%;
+                width: 100%;
+                padding: 5% 10%;
+                border-radius: 20px;
+                transition: all .5s;
+                &__name{
+                    height: 10%;
+                    color: #fff;
+                    text-align: right;
+                    margin: 0 0 10px 0;
+                    font-size: 1.5em;
+                }
+                &__discription{
+                    color: #fff;
+                }
+            }
+            &:hover .information{
+                background-color: rgba($color: #000, $alpha: 0.6);
+                top: 0;
+            }
+        }
+    }
+  }
+  .info{
   }
 }
