--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -18,10 +18,10 @@ section {
   display: block;
   color: #fff;
 }
-.heading{
-    font-size: 2.5em;
-    margin: 0;
-    text-align: center;
+.heading {
+  font-size: 2.5em;
+  margin: 0;
+  text-align: center;
 }
 .header {
   margin: 0;
@@ -104,51 +104,73 @@ section {
       font-weight: normal;
     }
   }
-  .programs{
+  .programs {
     width: 100%;
     box-sizing: border-box;
     padding: 5vh 5vw;
-    &-main{
-        margin: 5vh 0;
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        &__item{
-            width: 49%;//!менять
-            position: relative;
-            margin-bottom: 2vh;
-            border-radius: 20px;
-            overflow: hidden;
-            height: 55vh;
-            .information{
-                z-index: 5;
-                top:80%;
-                right: 0;
-                box-sizing: border-box;
-                position: absolute;
-                height: 100%;
-                width: 100%;
-                padding: 5% 10%;
-                border-radius: 20px;
-                transition: all .5s;
-                &__name{
-                    height: 10%;
-                    color: #fff;
-                    text-align: right;
-                    margin: 0 0 10px 0;
-                    font-size: 1.5em;
-                }
-                &__discription{
-                    color: #fff;
-                }
-            }
-            &:hover .information{
-                background-color: rgba($color: #000, $alpha: 0.6);
-                top: 0;
-            }
+    &-main {
+      margin: 5vh 0;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      &__item {
+        width: 49%; //!менять
+        position: relative;
+        margin-bottom: 2vh;
+        border-radius: 20px;
+        overflow: hidden;
+        height: 55vh;
+        .information {
+          z-index: 5;
+          top: 80%;
+          right: 0;
+          box-sizing: border-box;
+          position: absolute;
+          height: 100%;
+          width: 100%;
+          padding: 5% 10%;
+          border-radius: 20px;
+          transition: all 0.5s;
+          &__name {
+            height: 10%;
+            color: #fff;
+            text-align: right;
+            margin: 0 0 10px 0;
+            font-size: 1.5em;
+          }
+          &__discription {
+            color: #fff;
+          }
         }
+        &:hover .information {
+          background-color: rgba($color: #000, $alpha: 0.6);
+          top: 0;
+        }
+      }
     }
   }
-  .info{
+  .info {
+    padding: 5vh 0;
+    .advantages {
+      &__item {
+        box-sizing: border-box;
+        width: 100%;
+        height: 80vh;
+        position: relative;
+        &.first {
+          background: url(./../images/advantages/first.jpg);
+          background-position: center;
+          background-size: cover;
+          p {
+            width: 29%;
+            position: absolute;
+            bottom: 5vh;
+            left: 5vw;
+            color: #fff;
+            font-size: 1.5em;
+          }
+        }
+      }
+    }
   }
 }
