--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -158,7 +158,7 @@ section {
   top: 0;
 }
 .main .info {
-  padding: 5vh 0;
+  padding: 5vh 0 0;
 }
 .main .info .advantages__item {
   box-sizing: border-box;
@@ -178,4 +178,93 @@ section {
   left: 5vw;
   color: #fff;
   font-size: 1.5em;
+}
+.main .info .advantages__item.second {
+  display: flex;
+  justify-content: space-between;
+  padding: 5vh 5vw;
+  height: 70vh;
+  position: static;
+}
+.main .info .advantages__item.second .second__text {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.main .info .advantages__item.second .second__text h3 {
+  font-size: 1.7em;
+  margin: 0;
+}
+.main .info .advantages__item.second .second__text p {
+  font-size: 1.5em;
+  padding: 0;
+  margin: 0;
+}
+.main .info .advantages__item.second .second__image {
+  width: 60%;
+  height: 100%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.main .info .advantages__item.third {
+  height: auto;
+}
+.main .info .advantages__item.third .third__image {
+  background: url(./../images/advantages/third.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 80vh;
+  position: relative;
+  color: #fff;
+}
+.main .info .advantages__item.third .third__image * {
+  width: 30%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  left: 5vw;
+}
+.main .info .advantages__item.third .third__image h3 {
+  top: 10vh;
+  font-size: 1.7em;
+}
+.main .info .advantages__item.third .third__image p {
+  top: 15vh;
+  font-size: 1.5em;
+}
+.main .info .advantages__item.third .thrid__description {
+  display: flex;
+  justify-content: space-between;
+  padding: 5vh 5vw;
+}
+.main .info .advantages__item.third .thrid__description .thrid__description-block {
+  width: 32%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.main .info .advantages__item.third .thrid__description .thrid__description-block:first-child {
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main .info .advantages__item.fourth {
+  background: rgba(0, 0, 0, 0.6) url(./../images/advantages/fourth.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: color;
+  height: 90vh;
+}
+.main .info .advantages__item.fourth p {
+  color: #fff;
+  font-size: 1.5em;
+  width: 30%;
+  position: absolute;
+  left: 5vw;
+  bottom: 5vh;
 }/*# sourceMappingURL=style.css.map */
