--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -28,6 +28,9 @@ section {
   position: relative;
   background: rgba($color: #fff, $alpha: 0.2) url(./../images/header.jpg);
   background-position: top;
+  @media (max-width: 1024px) {
+    background-position: top left;
+  }
   background-size: cover;
   background-repeat: no-repeat;
   background-blend-mode: color;
@@ -41,6 +44,9 @@ section {
     padding: 5vh 5vw;
     width: 100%;
     box-sizing: border-box;
+    &__burger {
+      display: none;
+    }
     &__ul {
       width: 50%;
       display: flex;
@@ -79,6 +85,81 @@ section {
       text-decoration: none;
     }
   }
+  @media (max-width: 1024px) {
+    .topbar {
+      display: flex;
+      justify-content: space-between;
+      padding: 5vh 5vw;
+      width: 100%;
+      box-sizing: border-box;
+      &__burger {
+        display: block;
+        position: relative;
+        z-index: 101;
+        background: none;
+        border: none;
+        height: 10vh;
+        width: 10vh;
+        img {
+          object-fit: contain;
+          filter: invert(100);
+        }
+      }
+      &__ul {
+        width: 100%;
+        display: none;
+        flex-direction: column;
+        justify-content: flex-start;
+        z-index: 100;
+        margin: 0;
+        height: 100vh;
+        background: rgba($color: #404040, $alpha: 0.9);
+        position: fixed;
+        padding: 15vh 2vw 0;
+        top: 0;
+        left: 0;
+        list-style-type: none;
+        &--active {
+          display: flex;
+        }
+      }
+      &__li {
+        display: block;
+        margin: 2vh 0;
+      }
+      &__nav-link {
+        text-decoration: none;
+        font-size: 1.5em;
+        font-weight: bold;
+      }
+      &__contacts {
+        font-size: 1.5em;
+        font-weight: bold;
+      }
+    }
+    &-content {
+      width: 100%;
+      position: absolute;
+      top: 10vh;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      font-size: 1.8em;
+      text-align: center;
+      text-shadow: 0 0 10px #000;
+      &__link {
+        background: rgba($color: #000, $alpha: 0.6);
+        width: 300px;
+        border-radius: 60px;
+        padding: 10px 0;
+        margin: 0;
+        text-align: center;
+        text-decoration: none;
+      }
+    }
+  }
 }
 
 .main {
@@ -115,6 +196,9 @@ section {
       flex-wrap: wrap;
       &__item {
         width: 49%; //!менять
+        @media (max-width: 1024px) {
+          width: 100%;
+        }
         position: relative;
         margin-bottom: 2vh;
         border-radius: 20px;
@@ -152,7 +236,7 @@ section {
   .info {
     background: #000;
     .advantages {
-      &__heading{
+      &__heading {
         text-align: center;
         font-size: 1.8em;
         color: #fff;
@@ -168,22 +252,38 @@ section {
           background-size: cover;
           p {
             width: 29%;
+
             position: absolute;
             bottom: 5vh;
             left: 5vw;
             color: #fff;
             font-size: 1.5em;
+            @media (max-width: 1024px) {
+              width: 100%;
+              background-color: rgba($color: #000, $alpha: 0.6);
+              bottom: 0;
+              left: 0;
+              padding: 5vh 0;
+              text-align: center;
+              margin: 0;
+            }
           }
         }
         &.second {
           background: #d9d9d9;
-          display:flex;
+          display: flex;
           justify-content: space-between;
           padding: 5vh 5vw;
           height: 70vh;
           position: static;
-          .second__text{
+          @media (max-width: 1024px) {
+            flex-direction: column;
+          }
+          .second__text {
             width: 40%;
+            @media (max-width: 1024px) {
+              width: 100%;
+            }
             height: 100%;
             display: flex;
             flex-direction: column;
@@ -192,52 +292,74 @@ section {
             h3 {
               font-size: 1.7em;
               margin: 0;
-            }p{
+            }
+            p {
               font-size: 1.5em;
               padding: 0;
               margin: 0;
             }
           }
-          .second__image{
+          .second__image {
             width: 60%;
+            @media (max-width: 1024px) {
+              width: 100%;
+            }
             height: 100%;
             border-radius: 20px;
-            overflow:hidden;
+            overflow: hidden;
           }
         }
-        &.third{
+        &.third {
           height: auto;
-          .third__image{
+          .third__image {
             background: url(./../images/advantages/third.jpg);
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
             height: 80vh;
             position: relative;
-            color:#fff;
-            *{
+            color: #fff;
+            * {
               width: 30%;
               margin: 0;
               padding: 0;
               position: absolute;
               left: 5vw;
             }
-            h3{
-              top:10vh;
+            h3 {
+              top: 10vh;
               font-size: 1.7em;
             }
-            p{
+            p {
               top: 15vh;
               font-size: 1.5em;
             }
+            @media (max-width: 1024px) {
+              display: flex;
+              flex-direction: column;
+              justify-content: flex-end;
+              * {
+                width: 100%;
+                margin: 0;
+                padding: 2vh 2vw;
+                position: static;
+                left: 0;
+                background: rgba($color: #000, $alpha: 0.6);
+                box-sizing: border-box;
+              }
+              h3 {
+                top: 0;
+              }
+            }
           }
-          .thrid__description{
+          .thrid__description {
             background: #d9d9d9;
             display: flex;
             justify-content: space-between;
             padding: 5vh 5vw;
-            .thrid__description-block{
-              &:first-child{
+
+            .thrid__description-block {
+              &:first-child {
                 font-size: 1.5em;
                 display: flex;
                 justify-content: center;
@@ -247,16 +369,24 @@ section {
               border-radius: 20px;
               overflow: hidden;
             }
+            @media (max-width: 1024px) {
+              flex-direction: column;
+              .thrid__description-block {
+                width: 100%;
+                margin-bottom: 2vh;
+              }
+            }
           }
         }
-        &.fourth{
-          background:rgba($color: #000, $alpha: 0.6) url(./../images/advantages/fourth.webp);
+        &.fourth {
+          background: rgba($color: #000, $alpha: 0.6)
+            url(./../images/advantages/fourth.webp);
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
           background-blend-mode: color;
           height: 90vh;
-          p{
+          p {
             color: #fff;
             font-size: 1.5em;
             width: 30%;
@@ -264,55 +394,73 @@ section {
             left: 5vw;
             bottom: 5vh;
           }
+          @media (max-width: 1024px) {
+            p {
+              left: 0;
+              bottom: 0;
+              width: 100%;
+              margin: 0;
+              padding: 5vh 2vh;
+              box-sizing: border-box;
+            }
+          }
         }
       }
     }
-    .instructors{
+    .instructors {
       padding: 5vh 5vw;
       font-size: 1.8em;
 
-      &__heading{
+      &__heading {
         text-align: center;
         margin: 0;
         color: #fff;
       }
-      &-main{
+      &-main {
         display: flex;
         justify-content: space-between;
         padding: 5vh 0 0;
         flex-wrap: wrap;
-        &__item{
+        @media (max-width: 1024px) {
+          flex-direction: column;
+          align-items: center;
+        }
+        &__item {
           width: 30%;
+          @media (max-width: 1024px) {
+            width: 90%;
+          }
           margin-bottom: 5vh;
           color: #fff;
           text-align: center;
-          .img{
+          .img {
             margin: 0 auto;
             border-radius: 50%;
             overflow: hidden;
             width: 40vh;
             height: 40vh;
           }
-          h3, p{
-            margin: .5em 0;
+          h3,
+          p {
+            margin: 0.5em 0;
           }
         }
       }
     }
   }
-  .application{
+  .application {
     padding: 5vh 0;
     background: #000;
-    .heading{
+    .heading {
       color: #fff;
     }
-    .aplication-form{
+    .aplication-form {
       background-color: #252323;
       padding: 2vh 2vw;
       width: 40%;
       margin: 5vh auto 0;
       border-radius: 20px;
-      *{
+      * {
         display: block;
         width: 90%;
         padding: 10px;
@@ -321,39 +469,54 @@ section {
         border-radius: 10px;
         font-size: 1.5em;
       }
-      button{
+      button {
         width: 40%;
+      }
+      @media (max-width: 1024px) {
+        width: 90%;
       }
     }
   }
-  .contacts{
+  .contacts {
     padding: 5vh 5vw;
-    &-main{
+    &-main {
       margin-top: 2vh;
       display: flex;
       height: 50vh;
-      &__map{
+
+      &__map {
         width: 50%;
       }
-      &__information{
+      &__information {
         font-size: 1.5em;
         display: flex;
         flex-direction: column;
         width: 50%;
         box-sizing: border-box;
         padding: 0 4vh;
-        a{
+        a {
           display: block;
           color: #000;
-          &.mail{
+          &.mail {
             margin: 5vh 0;
           }
+        }
+      }
+      @media (max-width: 1024px) {
+        height: auto;
+        flex-direction: column-reverse;
+        &__map {
+          width: 100%;
+          height: 40vh;
+        }
+        &__information {
+          width: 100%;
         }
       }
     }
   }
 }
-.footer{
+.footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -362,14 +525,25 @@ section {
   font-size: 1.5em;
   color: #fff;
   text-align: center;
-  &__social{
+
+  @media (max-width: 1024px) {
+    flex-direction: column;
+    &__copyright {
+      margin: 2vh 0;
+    }
+  }
+  &__mail-link {
+    font-size: 1.5em;
+    color: #fff;
+  }
+  &__social {
     display: flex;
     justify-content: flex-end;
-    &-link{
+    &-link {
       margin-right: 1vw;
       width: 10vh;
       height: 10vw;
-      img{
+      img {
         object-fit: contain;
       }
     }
