--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -26,7 +26,7 @@ section {
 .header {
   margin: 0;
   position: relative;
-  background: rgba($color: #fff, $alpha: 0.2) url(./../images/header.jpg);
+  background: rgba($color: #fff, $alpha: 0.2) url(./../images/header.png);
   background-position: top;
   @media (max-width: 1024px) {
     background-position: top left;
@@ -206,7 +206,7 @@ section {
         height: 55vh;
         .information {
           z-index: 5;
-          top: 80%;
+          top: 75%;
           right: 0;
           box-sizing: border-box;
           position: absolute;
@@ -214,21 +214,41 @@ section {
           width: 100%;
           padding: 5% 10%;
           border-radius: 20px;
+          background-color: rgba($color: #000, $alpha: 0.6);
           transition: all 0.5s;
           &__name {
-            height: 10%;
+            width: 100%;
             color: #fff;
-            text-align: right;
-            margin: 0 0 10px 0;
+            text-align: center;
+            margin: 0 0 15px 0;
             font-size: 1.5em;
+            display: flex;
+            justify-content: space-between;
           }
           &__discription {
             color: #fff;
+            opacity: 0;
+            transition: opacity .3s;
+          }
+          &__button{
+            width: max-content;
+            height: max-content;
+            display: block;
+            text-decoration: none;
+            color: #fff;
+            font-size: large;
+            padding: 8px 16px;
+            background: #000;
+            border-radius: 20px;
+            border: 1px solid #fff;
           }
         }
         &:hover .information {
           background-color: rgba($color: #000, $alpha: 0.6);
           top: 0;
+          &__discription {
+            opacity: 1;
+          }
         }
       }
     }
@@ -547,5 +567,28 @@ section {
         object-fit: contain;
       }
     }
+  }
+}
+.modal {
+  opacity: 0;
+  width: 20%;
+  border-radius: 20px;
+  background: rgba($color: #404040, $alpha: 0.9);
+  position: fixed;
+  color: #fff;
+  text-align: center;
+  font-size: 1.2em;
+  padding: 2vh 2vw;
+  top: 50%;
+  left: 50%;
+  display: none;
+  translate: -50% -50%;
+  transition: opacity .3s;
+  &--active {
+    display: block;
+    opacity: 1;
+  }
+  @media (max-width: 1024px) {
+    width: 80%;
   }
 }
