--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -30,6 +30,90 @@ section {
   text-align: center;
 }
 
+.topbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 5vh 5vw;
+  width: 100%;
+  box-sizing: border-box;
+}
+.topbar__burger {
+  display: none;
+}
+.topbar__ul {
+  width: 50%;
+  display: flex;
+  margin: 0;
+  list-style-type: none;
+  justify-content: space-between;
+}
+.topbar__li {
+  display: block;
+}
+.topbar__nav-link {
+  text-decoration: none;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+.topbar__contacts {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+@media (max-width: 1024px) {
+  .topbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 5vh 5vw;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  .topbar__burger {
+    display: block;
+    position: relative;
+    z-index: 101;
+    background: none;
+    border: none;
+    height: 10vh;
+    width: 10vh;
+  }
+  .topbar__burger img {
+    -o-object-fit: contain;
+       object-fit: contain;
+    filter: invert(100);
+  }
+  .topbar__ul {
+    width: 100%;
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    z-index: 100;
+    margin: 0;
+    height: 100vh;
+    background: rgba(64, 64, 64, 0.9);
+    position: fixed;
+    padding: 15vh 2vw 0;
+    top: 0;
+    left: 0;
+    list-style-type: none;
+  }
+  .topbar__ul--active {
+    display: flex;
+  }
+  .topbar__li {
+    display: block;
+    margin: 2vh 0;
+  }
+  .topbar__nav-link {
+    text-decoration: none;
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+  .topbar__contacts {
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+}
 .header {
   margin: 0;
   position: relative;
@@ -42,40 +126,6 @@ section {
   height: 100vh;
   box-sizing: border-box;
   color: #fff;
-}
-@media (max-width: 1024px) {
-  .header {
-    background-position: top left;
-  }
-}
-.header .topbar {
-  display: flex;
-  justify-content: space-between;
-  padding: 5vh 5vw;
-  width: 100%;
-  box-sizing: border-box;
-}
-.header .topbar__burger {
-  display: none;
-}
-.header .topbar__ul {
-  width: 50%;
-  display: flex;
-  margin: 0;
-  list-style-type: none;
-  justify-content: space-between;
-}
-.header .topbar__li {
-  display: block;
-}
-.header .topbar__nav-link {
-  text-decoration: none;
-  font-size: 1.5em;
-  font-weight: bold;
-}
-.header .topbar__contacts {
-  font-size: 1.5em;
-  font-weight: bold;
 }
 .header-content {
   width: 60%;
@@ -96,57 +146,8 @@ section {
   text-decoration: none;
 }
 @media (max-width: 1024px) {
-  .header .topbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 5vh 5vw;
-    width: 100%;
-    box-sizing: border-box;
-  }
-  .header .topbar__burger {
-    display: block;
-    position: relative;
-    z-index: 101;
-    background: none;
-    border: none;
-    height: 10vh;
-    width: 10vh;
-  }
-  .header .topbar__burger img {
-    -o-object-fit: contain;
-       object-fit: contain;
-    filter: invert(100);
-  }
-  .header .topbar__ul {
-    width: 100%;
-    display: none;
-    flex-direction: column;
-    justify-content: flex-start;
-    z-index: 100;
-    margin: 0;
-    height: 100vh;
-    background: rgba(64, 64, 64, 0.9);
-    position: fixed;
-    padding: 15vh 2vw 0;
-    top: 0;
-    left: 0;
-    list-style-type: none;
-  }
-  .header .topbar__ul--active {
-    display: flex;
-  }
-  .header .topbar__li {
-    display: block;
-    margin: 2vh 0;
-  }
-  .header .topbar__nav-link {
-    text-decoration: none;
-    font-size: 1.5em;
-    font-weight: bold;
-  }
-  .header .topbar__contacts {
-    font-size: 1.5em;
-    font-weight: bold;
+  .header {
+    background-position: top left;
   }
   .header-content {
     width: 100%;
