--- a/assets/styles/content.css
+++ b/assets/styles/content.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=content.css.map */
+body {
+  background: #000;
+}
+
+.topbar {
+  border-bottom: 2px solid #fff;
+}/*# sourceMappingURL=content.css.map */
