--- a/assets/styles/content.css
+++ b/assets/styles/content.css
@@ -1,7 +1,29 @@
 body {
   background: #000;
+  color: #fff;
 }
 
 .topbar {
   border-bottom: 2px solid #fff;
+}
+
+.program {
+  width: 80%;
+  margin: 6vh auto 2vh;
+}
+.program_heading {
+  text-align: center;
+}
+.program_button {
+  width: -moz-max-content;
+  width: max-content;
+  font-size: large;
+  border: 2px solid;
+  background: #333030;
+  border-radius: 20px;
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 30px;
+  margin: 0 auto;
+  display: block;
 }/*# sourceMappingURL=content.css.map */
