--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -240,11 +240,16 @@ section {
             color: #fff;
             font-size: large;
             padding: 8px 16px;
+            position: absolute;
+            bottom: 5%;
+            right: 5%;
             background: #000;
             border-radius: 20px;
             border: 1px solid #fff;
+            z-index: 10;
           }
         }
+
         &:hover .information {
           background-color: rgba($color: #000, $alpha: 0.6);
           top: 0;
