--- a/assets/styles/content.scss
+++ b/assets/styles/content.scss
@@ -8,6 +8,8 @@ body{
 .program{
     width: 80%;
     margin: 6vh auto 2vh;
+    text-align: center;
+    font-size: larger;
     &_heading{
         text-align: center;
     }
@@ -22,5 +24,11 @@ body{
         padding: 5px 30px;
         margin: 0 auto;
         display: block;
+    }
+    &_list{
+        text-align: center;
+        &-li{
+            display:inline-block
+        }
     }
 }
