--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,6 @@
 * {
   font-family: Calibri, "Trebuchet MS", sans-serif;
+  box-sizing: border-box;
 }
 
 body {
@@ -203,7 +204,7 @@ section {
   padding: 5vh 5vw;
 }
 .main .programs-main {
-  margin: 5vh 0;
+  margin: 5vh 0 0;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -570,11 +571,12 @@ section {
 }
 
 .footer {
+  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #000;
-  padding: 4vh 5vw;
+  padding: 0 5vw;
   font-size: 1.5em;
   color: #fff;
   text-align: center;
@@ -588,11 +590,13 @@ section {
   }
 }
 .footer__mail-link {
+  box-sizing: border-box;
   font-size: 1.5em;
   color: #fff;
 }
 .footer__social {
   display: flex;
+  box-sizing: border-box;
   justify-content: flex-end;
 }
 .footer__social-link {
