--- a/assets/styles/content.scss
+++ b/assets/styles/content.scss
@@ -15,10 +15,10 @@ body {
     }
     &_button {
         width: max-content;
-        font-size: large;
+        font-size: larger;
         border: 2px solid;
         background: #333030;
-        border-radius: 20px;
+        border-radius: 25px;
         color: #fff;
         text-decoration: none;
         padding: 5px 30px;
@@ -61,4 +61,7 @@ body {
             }
         }
     }
+}
+.footer {
+    background: #333030;
 }
