--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -576,23 +576,33 @@ section {
   justify-content: space-between;
   align-items: center;
   background-color: #000;
-  padding: 0 5vw;
+  padding: 10px 5vw;
   font-size: 1.5em;
   color: #fff;
   text-align: center;
 }
 @media (max-width: 1024px) {
   .footer {
+    flex-wrap: wrap;
     flex-direction: column;
+    max-height: 15vh;
+    justify-content: space-evenly;
+    justify-items: center;
+    align-items: center;
   }
   .footer__copyright {
-    margin: 2vh 0;
+    font-size: small;
   }
 }
 .footer__mail-link {
   box-sizing: border-box;
   font-size: 1.5em;
   color: #fff;
+}
+@media (max-width: 1024px) {
+  .footer__mail-link {
+    font-size: medium;
+  }
 }
 .footer__social {
   display: flex;
@@ -602,9 +612,16 @@ section {
 .footer__social-link {
   margin-right: 1vw;
   width: 10vh;
-  height: 10vw;
+  height: 10vh;
+}
+@media (max-width: 1024px) {
+  .footer__social-link {
+    width: 8vh;
+    height: 8vh;
+  }
 }
 .footer__social-link img {
+  display: block;
   -o-object-fit: contain;
      object-fit: contain;
 }
