--- a/assets/styles/content.css
+++ b/assets/styles/content.css
@@ -69,4 +69,44 @@ body {
 
 .footer {
   background: #333030;
+}
+
+.gallery {
+  width: 80%;
+  margin: 2vh auto;
+}
+.gallery_body {
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: 300px;
+  grid-auto-flow: dense;
+}
+.gallery_image {
+  display: block;
+  width: content;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.gallery_image:nth-of-type(3n) {
+  grid-column: span 2;
+}
+.gallery_image:nth-of-type(7n) {
+  grid-row: span 2;
+}
+.gallery_heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.gallery_heading hr {
+  width: 100%;
+  height: 0;
+}
+.gallery_heading hr:first-child {
+  margin-right: 15px;
+}
+.gallery_heading hr:last-child {
+  margin-left: 15px;
 }/*# sourceMappingURL=content.css.map */
