--- a/assets/styles/content.scss
+++ b/assets/styles/content.scss
@@ -65,3 +65,43 @@ body {
 .footer {
     background: #333030;
 }
+.gallery {
+    width: 80%;
+    margin: 2vh auto;
+    &_body {
+        display: grid;
+        grid-gap: 15px;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-auto-rows: 300px;
+        grid-auto-flow: dense;
+    }
+    &_image {
+        display: block;
+        width: content;
+        height: 100%;
+        object-fit: cover;
+        &:nth-of-type(3n) {
+            grid-column: span 2;
+        }
+
+        &:nth-of-type(7n) {
+            grid-row: span 2;
+        }
+    }
+    &_heading {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        hr {
+            width: 100%;
+
+            height: 0;
+            &:first-child {
+                margin-right: 15px;
+            }   
+            &:last-child {
+                margin-left: 15px;
+            }
+        }
+    }
+}
