--- a/assets/styles/content.css
+++ b/assets/styles/content.css
@@ -49,22 +49,17 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 60%;
+  width: 80%;
   margin: 3vh auto;
+}
+.program_slider .slick-track {
+  height: 30vh;
 }
 .program_slider-image {
   display: block;
-  -o-object-fit: contain;
-     object-fit: contain;
-  box-shadow: 0 0 10px 0 #fff;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-.program_slider-image-left, .program_slider-image-right {
-  height: 40vh;
-}
-.program_slider-image-center {
-  height: 50vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
 }
 
 .footer {
@@ -84,7 +79,7 @@ body {
 }
 .gallery_image {
   display: block;
-  width: content;
+  width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -94,6 +89,11 @@ body {
 }
 .gallery_image:nth-of-type(7n) {
   grid-row: span 2;
+}
+@media (min-height: 1100px) {
+  .gallery_image:nth-last-child(-n+3) {
+    grid-row: 1;
+  }
 }
 .gallery_heading {
   display: flex;
