--- a/assets/styles/content.scss
+++ b/assets/styles/content.scss
@@ -45,20 +45,15 @@ body {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 60%;
+        width: 80%;
         margin: 3vh auto;
+        .slick-track{
+            height: 30vh;
+        }
         &-image {
             display: block;
-            object-fit: contain;
-            box-shadow: 0 0 10px 0 #fff;
-            width: fit-content;
-            &-left,
-            &-right {
-                height: 40vh;
-            }
-            &-center {
-                height: 50vh;
-            }
+            object-fit: cover;
+            height: 100%;
         }
     }
 }
@@ -77,7 +72,7 @@ body {
     }
     &_image {
         display: block;
-        width: content;
+        width: 100%;
         height: 100%;
         object-fit: cover;
         &:nth-of-type(3n) {
@@ -86,6 +81,11 @@ body {
 
         &:nth-of-type(7n) {
             grid-row: span 2;
+        }
+        @media (min-height: 1100px) {
+            &:nth-last-child(-n + 3) {
+                grid-row: 1;
+            }
         }
     }
     &_heading {
@@ -98,7 +98,7 @@ body {
             height: 0;
             &:first-child {
                 margin-right: 15px;
-            }   
+            }
             &:last-child {
                 margin-left: 15px;
             }
